--- a/torcs/torcs/data/tracks/a-speedway/Makefile
+++ b/torcs/torcs/data/tracks/a-speedway/Makefile
@@ -18,7 +18,7 @@
 
 DATADIR   = tracks/oval/a-speedway
 
-DATA      = a-speedway.xml background.png a-speedway.ac a-speedway-relief.ac
+DATA      = a-speedway.xml background.png a-speedway.ac a-speedway-relief.ac a-speedway.png
 
 
 include ${MAKE_DEFAULT}
