--- a/torcs/torcs/data/cars/models/cg-nascar-rwd/cg-nascar-rwd-lod1.ac
+++ b/torcs/torcs/data/cars/models/cg-nascar-rwd/cg-nascar-rwd-lod1.ac
@@ -1,7 +1,7 @@
 AC3Db
 MATERIAL "ac3dmat1" rgb 1 1 1  amb 0.2 0.2 0.2  emis 0 0 0  spec 0.5 0.5 0.5  shi 10  trans 0
 OBJECT world
-kids 2
+kids 6
 OBJECT group
 name "my_world"
 loc -5.96046e-08 0.501579 0.0106955
@@ -525,4 +525,236 @@ refs 3
 14 0.210739 0.466837
 15 0.182778 0.36838
 9 0.192518 0.301227
+kids 0
+OBJECT poly
+name "box"
+loc -1.67242 0.105153 0.850817
+texture "tex-wheel.rgb"
+texrep 0.5 0.5
+numvert 8
+-0.305097 -0.322962 -0.134493
+-0.305097 0.322962 -0.134493
+0.305096 0.322962 -0.134493
+0.305096 -0.322962 -0.134493
+-0.305097 -0.322962 0.134493
+-0.305097 0.322962 0.134493
+0.305096 0.322962 0.134493
+0.305096 -0.322962 0.134493
+numsurf 6
+SURF 0x0
+mat 0
+refs 4
+0 0 0
+1 0 1
+2 1 1
+3 1 0
+SURF 0x0
+mat 0
+refs 4
+6 1 1
+7 1 0
+3 1 0
+2 1 1
+SURF 0x0
+mat 0
+refs 4
+7 1 0
+6 1 1
+5 0 1
+4 0 0
+SURF 0x0
+mat 0
+refs 4
+4 0 0
+5 0 1
+1 0 1
+0 0 0
+SURF 0x0
+mat 0
+refs 4
+1 0 1
+5 0 1
+6 1 1
+2 1 1
+SURF 0x0
+mat 0
+refs 4
+4 0 0
+0 0 0
+3 1 0
+7 1 0
+kids 0
+OBJECT poly
+name "box"
+loc 1.29391 0.0734851 0.850817
+texture "tex-wheel.rgb"
+texrep 0.5 0.5
+numvert 8
+-0.305097 -0.322962 -0.134493
+-0.305097 0.322962 -0.134493
+0.305096 0.322962 -0.134493
+0.305096 -0.322962 -0.134493
+-0.305097 -0.322962 0.134493
+-0.305097 0.322962 0.134493
+0.305096 0.322962 0.134493
+0.305096 -0.322962 0.134493
+numsurf 6
+SURF 0x0
+mat 0
+refs 4
+0 0 0
+1 0 1
+2 1 1
+3 1 0
+SURF 0x0
+mat 0
+refs 4
+6 1 1
+7 1 0
+3 1 0
+2 1 1
+SURF 0x0
+mat 0
+refs 4
+7 1 0
+6 1 1
+5 0 1
+4 0 0
+SURF 0x0
+mat 0
+refs 4
+4 0 0
+5 0 1
+1 0 1
+0 0 0
+SURF 0x0
+mat 0
+refs 4
+1 0 1
+5 0 1
+6 1 1
+2 1 1
+SURF 0x0
+mat 0
+refs 4
+4 0 0
+0 0 0
+3 1 0
+7 1 0
+kids 0
+OBJECT poly
+name "box"
+loc 1.28663 0.0630699 -0.780809
+texture "tex-wheel.rgb"
+texrep 0.5 0.5
+numvert 8
+-0.305097 -0.322962 -0.134493
+-0.305097 0.322962 -0.134493
+0.305096 0.322962 -0.134493
+0.305096 -0.322962 -0.134493
+-0.305097 -0.322962 0.134493
+-0.305097 0.322962 0.134493
+0.305096 0.322962 0.134493
+0.305096 -0.322962 0.134493
+numsurf 6
+SURF 0x0
+mat 0
+refs 4
+0 0 0
+1 0 1
+2 1 1
+3 1 0
+SURF 0x0
+mat 0
+refs 4
+6 1 1
+7 1 0
+3 1 0
+2 1 1
+SURF 0x0
+mat 0
+refs 4
+7 1 0
+6 1 1
+5 0 1
+4 0 0
+SURF 0x0
+mat 0
+refs 4
+4 0 0
+5 0 1
+1 0 1
+0 0 0
+SURF 0x0
+mat 0
+refs 4
+1 0 1
+5 0 1
+6 1 1
+2 1 1
+SURF 0x0
+mat 0
+refs 4
+4 0 0
+0 0 0
+3 1 0
+7 1 0
+kids 0
+OBJECT poly
+name "box"
+loc -1.67708 0.107396 -0.8604
+texture "tex-wheel.rgb"
+texrep 0.5 0.5
+numvert 8
+-0.305097 -0.322962 -0.134493
+-0.305097 0.322962 -0.134493
+0.305096 0.322962 -0.134493
+0.305096 -0.322962 -0.134493
+-0.305097 -0.322962 0.134493
+-0.305097 0.322962 0.134493
+0.305096 0.322962 0.134493
+0.305096 -0.322962 0.134493
+numsurf 6
+SURF 0x0
+mat 0
+refs 4
+0 0 0
+1 0 1
+2 1 1
+3 1 0
+SURF 0x0
+mat 0
+refs 4
+6 1 1
+7 1 0
+3 1 0
+2 1 1
+SURF 0x0
+mat 0
+refs 4
+7 1 0
+6 1 1
+5 0 1
+4 0 0
+SURF 0x0
+mat 0
+refs 4
+4 0 0
+5 0 1
+1 0 1
+0 0 0
+SURF 0x0
+mat 0
+refs 4
+1 0 1
+5 0 1
+6 1 1
+2 1 1
+SURF 0x0
+mat 0
+refs 4
+4 0 0
+0 0 0
+3 1 0
+7 1 0
 kids 0
