--- a/torcs/torcs/data/cars/models/360-modena/360-modena-lod1.ac
+++ b/torcs/torcs/data/cars/models/360-modena/360-modena-lod1.ac
@@ -1,7 +1,7 @@
 AC3Db
 MATERIAL "ac3dmat1" rgb 1 1 1  amb 0.2 0.2 0.2  emis 0 0 0  spec 0.5 0.5 0.5  shi 10  trans 0
 OBJECT world
-kids 1
+kids 5
 OBJECT group
 name "my_world"
 kids 4
@@ -209,4 +209,236 @@ refs 3
 3 0.121942 0.470212
 0 0 0.153066
 2 0.125194 0.160197
+kids 0
+OBJECT poly
+name "box"
+loc -1.42782 0.165062 0.759618
+texture "tex-wheel.rgb"
+texrep 0.5 0.5
+numvert 8
+-0.294545 -0.298421 -0.13177
+-0.294545 0.298421 -0.13177
+0.294545 0.298421 -0.13177
+0.294545 -0.298421 -0.13177
+-0.294545 -0.298421 0.13177
+-0.294545 0.298421 0.13177
+0.294545 0.298421 0.13177
+0.294545 -0.298421 0.13177
+numsurf 6
+SURF 0x0
+mat 0
+refs 4
+0 0 0
+1 0 1
+2 1 1
+3 1 0
+SURF 0x0
+mat 0
+refs 4
+6 1 1
+7 1 0
+3 1 0
+2 1 1
+SURF 0x0
+mat 0
+refs 4
+7 1 0
+6 1 1
+5 0 1
+4 0 0
+SURF 0x0
+mat 0
+refs 4
+4 0 0
+5 0 1
+1 0 1
+0 0 0
+SURF 0x0
+mat 0
+refs 4
+1 0 1
+5 0 1
+6 1 1
+2 1 1
+SURF 0x0
+mat 0
+refs 4
+4 0 0
+0 0 0
+3 1 0
+7 1 0
+kids 0
+OBJECT poly
+name "box"
+loc 1.22309 0.14956 0.759618
+texture "tex-wheel.rgb"
+texrep 0.5 0.5
+numvert 8
+-0.294545 -0.267416 -0.13177
+-0.294545 0.267416 -0.13177
+0.294545 0.267416 -0.13177
+0.294545 -0.267416 -0.13177
+-0.294545 -0.267416 0.13177
+-0.294545 0.267416 0.13177
+0.294545 0.267416 0.13177
+0.294545 -0.267416 0.13177
+numsurf 6
+SURF 0x0
+mat 0
+refs 4
+0 0 0
+1 0 1
+2 1 1
+3 1 0
+SURF 0x0
+mat 0
+refs 4
+6 1 1
+7 1 0
+3 1 0
+2 1 1
+SURF 0x0
+mat 0
+refs 4
+7 1 0
+6 1 1
+5 0 1
+4 0 0
+SURF 0x0
+mat 0
+refs 4
+4 0 0
+5 0 1
+1 0 1
+0 0 0
+SURF 0x0
+mat 0
+refs 4
+1 0 1
+5 0 1
+6 1 1
+2 1 1
+SURF 0x0
+mat 0
+refs 4
+4 0 0
+0 0 0
+3 1 0
+7 1 0
+kids 0
+OBJECT poly
+name "box"
+loc 1.22309 0.14956 -0.705359
+texture "tex-wheel.rgb"
+texrep 0.5 0.5
+numvert 8
+-0.294545 -0.267416 -0.13177
+-0.294545 0.267416 -0.13177
+0.294545 0.267416 -0.13177
+0.294545 -0.267416 -0.13177
+-0.294545 -0.267416 0.13177
+-0.294545 0.267416 0.13177
+0.294545 0.267416 0.13177
+0.294545 -0.267416 0.13177
+numsurf 6
+SURF 0x0
+mat 0
+refs 4
+0 0 0
+1 0 1
+2 1 1
+3 1 0
+SURF 0x0
+mat 0
+refs 4
+6 1 1
+7 1 0
+3 1 0
+2 1 1
+SURF 0x0
+mat 0
+refs 4
+7 1 0
+6 1 1
+5 0 1
+4 0 0
+SURF 0x0
+mat 0
+refs 4
+4 0 0
+5 0 1
+1 0 1
+0 0 0
+SURF 0x0
+mat 0
+refs 4
+1 0 1
+5 0 1
+6 1 1
+2 1 1
+SURF 0x0
+mat 0
+refs 4
+4 0 0
+0 0 0
+3 1 0
+7 1 0
+kids 0
+OBJECT poly
+name "box"
+loc -1.43557 0.172813 -0.736363
+texture "tex-wheel.rgb"
+texrep 0.5 0.5
+numvert 8
+-0.294545 -0.298421 -0.13177
+-0.294545 0.298421 -0.13177
+0.294545 0.298421 -0.13177
+0.294545 -0.298421 -0.13177
+-0.294545 -0.298421 0.13177
+-0.294545 0.298421 0.13177
+0.294545 0.298421 0.13177
+0.294545 -0.298421 0.13177
+numsurf 6
+SURF 0x0
+mat 0
+refs 4
+0 0 0
+1 0 1
+2 1 1
+3 1 0
+SURF 0x0
+mat 0
+refs 4
+6 1 1
+7 1 0
+3 1 0
+2 1 1
+SURF 0x0
+mat 0
+refs 4
+7 1 0
+6 1 1
+5 0 1
+4 0 0
+SURF 0x0
+mat 0
+refs 4
+4 0 0
+5 0 1
+1 0 1
+0 0 0
+SURF 0x0
+mat 0
+refs 4
+1 0 1
+5 0 1
+6 1 1
+2 1 1
+SURF 0x0
+mat 0
+refs 4
+4 0 0
+0 0 0
+3 1 0
+7 1 0
 kids 0
