--- a/torcs/torcs/data/cars/models/mclaren-f1/mclaren-f1-lod1.ac
+++ b/torcs/torcs/data/cars/models/mclaren-f1/mclaren-f1-lod1.ac
@@ -1,7 +1,7 @@
 AC3Db
 MATERIAL "ac3dmat1" rgb 1 1 1  amb 0.2 0.2 0.2  emis 0 0 0  spec 0.5 0.5 0.5  shi 10  trans 0
 OBJECT world
-kids 1
+kids 5
 OBJECT group
 name "my_world"
 kids 7
@@ -409,4 +409,236 @@ refs 3
 11 0.957468 0.552174
 8 0.934917 0.596217
 10 0.963583 0.59132
+kids 0
+OBJECT poly
+name "box"
+loc -1.50927 0.214994 0.821614
+texture "tex-wheel.rgb"
+texrep 0.5 0.5
+numvert 8
+-0.341009 -0.333259 -0.166669
+-0.341009 0.333259 -0.166669
+0.341009 0.333259 -0.166669
+0.341009 -0.333259 -0.166669
+-0.341009 -0.333259 0.166669
+-0.341009 0.333259 0.166669
+0.341009 0.333259 0.166669
+0.341009 -0.333259 0.166669
+numsurf 6
+SURF 0x0
+mat 0
+refs 4
+0 0 0
+1 0 1
+2 1 1
+3 1 0
+SURF 0x0
+mat 0
+refs 4
+6 1 1
+7 1 0
+3 1 0
+2 1 1
+SURF 0x0
+mat 0
+refs 4
+7 1 0
+6 1 1
+5 0 1
+4 0 0
+SURF 0x0
+mat 0
+refs 4
+4 0 0
+5 0 1
+1 0 1
+0 0 0
+SURF 0x0
+mat 0
+refs 4
+1 0 1
+5 0 1
+6 1 1
+2 1 1
+SURF 0x0
+mat 0
+refs 4
+4 0 0
+0 0 0
+3 1 0
+7 1 0
+kids 0
+OBJECT poly
+name "box"
+loc 1.21223 0.191743 0.875445
+texture "tex-wheel.rgb"
+texrep 0.5 0.5
+numvert 8
+-0.341009 -0.333259 -0.166669
+-0.341009 0.333259 -0.166669
+0.341009 0.333259 -0.166669
+0.341009 -0.333259 -0.166669
+-0.341009 -0.333259 0.166669
+-0.341009 0.333259 0.166669
+0.341009 0.333259 0.166669
+0.341009 -0.333259 0.166669
+numsurf 6
+SURF 0x0
+mat 0
+refs 4
+0 0 0
+1 0 1
+2 1 1
+3 1 0
+SURF 0x0
+mat 0
+refs 4
+6 1 1
+7 1 0
+3 1 0
+2 1 1
+SURF 0x0
+mat 0
+refs 4
+7 1 0
+6 1 1
+5 0 1
+4 0 0
+SURF 0x0
+mat 0
+refs 4
+4 0 0
+5 0 1
+1 0 1
+0 0 0
+SURF 0x0
+mat 0
+refs 4
+1 0 1
+5 0 1
+6 1 1
+2 1 1
+SURF 0x0
+mat 0
+refs 4
+4 0 0
+0 0 0
+3 1 0
+7 1 0
+kids 0
+OBJECT poly
+name "box"
+loc 1.21342 0.183572 -0.829205
+texture "tex-wheel.rgb"
+texrep 0.5 0.5
+numvert 8
+-0.341009 -0.333259 -0.166669
+-0.341009 0.333259 -0.166669
+0.341009 0.333259 -0.166669
+0.341009 -0.333259 -0.166669
+-0.341009 -0.333259 0.166669
+-0.341009 0.333259 0.166669
+0.341009 0.333259 0.166669
+0.341009 -0.333259 0.166669
+numsurf 6
+SURF 0x0
+mat 0
+refs 4
+0 0 0
+1 0 1
+2 1 1
+3 1 0
+SURF 0x0
+mat 0
+refs 4
+6 1 1
+7 1 0
+3 1 0
+2 1 1
+SURF 0x0
+mat 0
+refs 4
+7 1 0
+6 1 1
+5 0 1
+4 0 0
+SURF 0x0
+mat 0
+refs 4
+4 0 0
+5 0 1
+1 0 1
+0 0 0
+SURF 0x0
+mat 0
+refs 4
+1 0 1
+5 0 1
+6 1 1
+2 1 1
+SURF 0x0
+mat 0
+refs 4
+4 0 0
+0 0 0
+3 1 0
+7 1 0
+kids 0
+OBJECT poly
+name "box"
+loc -1.50573 0.206823 -0.865092
+texture "tex-wheel.rgb"
+texrep 0.5 0.5
+numvert 8
+-0.341009 -0.333259 -0.166669
+-0.341009 0.333259 -0.166669
+0.341009 0.333259 -0.166669
+0.341009 -0.333259 -0.166669
+-0.341009 -0.333259 0.166669
+-0.341009 0.333259 0.166669
+0.341009 0.333259 0.166669
+0.341009 -0.333259 0.166669
+numsurf 6
+SURF 0x0
+mat 0
+refs 4
+0 0 0
+1 0 1
+2 1 1
+3 1 0
+SURF 0x0
+mat 0
+refs 4
+6 1 1
+7 1 0
+3 1 0
+2 1 1
+SURF 0x0
+mat 0
+refs 4
+7 1 0
+6 1 1
+5 0 1
+4 0 0
+SURF 0x0
+mat 0
+refs 4
+4 0 0
+5 0 1
+1 0 1
+0 0 0
+SURF 0x0
+mat 0
+refs 4
+1 0 1
+5 0 1
+6 1 1
+2 1 1
+SURF 0x0
+mat 0
+refs 4
+4 0 0
+0 0 0
+3 1 0
+7 1 0
 kids 0
