--- a/torcs/torcs/data/tracks/e-track-4/e-track-4.ac
+++ b/torcs/torcs/data/tracks/e-track-4/e-track-4.ac
@@ -1,4 +1,5 @@
 AC3Db
+MATERIAL "ac3dmat1" rgb 1 1 1  amb 1 1 1  emis 0 0 0  spec 0 0 0  shi 0  trans 0
 MATERIAL "" rgb 1 1 1  amb 1 1 1  emis 0 0 0  spec 0 0 0  shi 0  trans 0
 OBJECT world
 kids 31
