--- a/torcs/torcs/src/modules/graphic/ssggraph/Makefile
+++ b/torcs/torcs/src/modules/graphic/ssggraph/Makefile
@@ -17,7 +17,7 @@
 
 
 SOURCES   = grmain.cpp grboard.cpp grsound.cpp ssggraph.cpp grcam.cpp grcar.cpp \
-	    grscene.cpp grutil.cpp grshadow.cpp grsmoke.cpp grskidmarks.cpp
+	    grscene.cpp grutil.cpp grshadow.cpp grsmoke.cpp grskidmarks.cpp grloadac.cpp
 
 MODULE    = ssggraph.so
 
