--- a/torcs/torcs/src/drivers/damned/1/Makefile
+++ b/torcs/torcs/src/drivers/damned/1/Makefile
@@ -20,7 +20,7 @@ ROBOT = damned
 
 DATADIR   = drivers/${ROBOT}/1
 
-DATA      =  car.xml buggy.rgb logo.rgb
+DATA      =  car.xml car-dirt.xml buggy.rgb logo.rgb
 
 include ${MAKE_DEFAULT}
 
