--- a/torcs/torcs/data/data/objects/tree13.ac
+++ b/torcs/torcs/data/data/objects/tree13.ac
@@ -4,17 +4,17 @@ OBJECT world
 kids 1
 OBJECT poly
 name "rect"
-loc 0 12.5 0
-texture "tree13.rgb"
+loc 0 8 0
+texture "/home/torcs/runtime3/games/torcs/eee/tree13.rgb"
 numvert 8
--8 12.5 0
-8 12.5 0
-8 -12.5 0
--8 -12.5 0
-3.42727e-07 12.5 8
--3.42727e-07 12.5 -8
--3.42727e-07 -12.5 -8
-3.42727e-07 -12.5 8
+-8 8 0
+8 8 0
+8 -8 0
+-8 -8 0
+3.42727e-07 8 8
+-3.42727e-07 8 -8
+-3.42727e-07 -8 -8
+3.42727e-07 -8 8
 numsurf 2
 SURF 0x20
 mat 0
