--- a/torcs/torcs/data/data/objects/tree17.ac
+++ b/torcs/torcs/data/data/objects/tree17.ac
@@ -4,17 +4,17 @@ OBJECT world
 kids 1
 OBJECT poly
 name "rect"
-loc 0 11.5 0
-texture "tree17.rgb"
+loc 0 6.75 0
+texture "/home/torcs/runtime3/games/torcs/eee/tree17.rgb"
 numvert 8
--4.5 11.5 0
-4.5 11.5 0
-4.5 -11.5 0
--4.5 -11.5 0
-1.93715e-07 11.5 4.5
--1.93715e-07 11.5 -4.5
--1.93715e-07 -11.5 -4.5
-1.93715e-07 -11.5 4.5
+-4.5 6.75 0
+4.5 6.75 0
+4.5 -6.75 0
+-4.5 -6.75 0
+1.93715e-07 6.75 4.5
+-1.93715e-07 6.75 -4.5
+-1.93715e-07 -6.75 -4.5
+1.93715e-07 -6.75 4.5
 numsurf 2
 SURF 0x20
 mat 0
