--- a/torcs/torcs/data/data/objects/tree7.ac
+++ b/torcs/torcs/data/data/objects/tree7.ac
@@ -4,17 +4,17 @@ OBJECT world
 kids 1
 OBJECT poly
 name "rect"
-loc 0.0999999 12.05 0
-texture "tree7.rgb"
+loc -7.45058e-09 7.75 0
+texture "/home/torcs/runtime3/games/torcs/eee/tree7.rgb"
 numvert 8
--7 12.05 0.1
-7 12.05 0.1
-7 -11.95 0.1
--7 -11.95 0.1
--0.0999996 11.95 7
--0.1 11.95 -7
--0.1 -12.05 -7
--0.0999996 -12.05 7
+-7 7.75 0.1
+7 7.75 0.1
+7 -7.68568 0.1
+-7 -7.68568 0.1
+-0.0999996 7.68568 7
+-0.1 7.68568 -7
+-0.1 -7.75 -7
+-0.0999996 -7.75 7
 numsurf 2
 SURF 0x20
 mat 0
