--- a/torcs/torcs/src/tools/trackgen/Makefile
+++ b/torcs/torcs/src/tools/trackgen/Makefile
@@ -25,7 +25,7 @@ DATADIR      = tools/trackgen
 
 DATA         = trackgen.xml
 
-SOURCES      = trackgen.cpp track.cpp easymesh.cpp linuxspec.cpp relief.cpp
+SOURCES      = trackgen.cpp track.cpp easymesh.cpp ../../linux/linuxspec.cpp relief.cpp elevation.cpp objects.cpp ac3d.cpp util.cpp
 
 SOLIBS       = -lplibssg -lplibsg -lplibul -lrobottools -ltgf -ltxml
 
