--- a/torcs/torcs/data/data/objects/tree8.ac
+++ b/torcs/torcs/data/data/objects/tree8.ac
@@ -4,17 +4,17 @@ OBJECT world
 kids 1
 OBJECT poly
 name "rect"
-loc 2.38419e-07 12 0
-texture "tree8.rgb"
+loc -2.38418e-07 6.25 0
+texture "/home/torcs/runtime3/games/torcs/eee/tree8.rgb"
 numvert 8
--4.5 12 0
-4.5 12 0
-4.5 -12 0
--4.5 -12 0
--4.47035e-08 12 4.5
--4.32134e-07 12 -4.5
--4.32134e-07 -12 -4.5
--4.47035e-08 -12 4.5
+-4.5 6.25 0
+4.5 6.25 0
+4.5 -6.25 0
+-4.5 -6.25 0
+-4.47035e-08 6.25 4.5
+-4.32134e-07 6.25 -4.5
+-4.32134e-07 -6.25 -4.5
+-4.47035e-08 -6.25 4.5
 numsurf 2
 SURF 0x20
 mat 0
