--- a/torcs/torcs/src/libs/torcs/Makefile
+++ b/torcs/torcs/src/libs/torcs/Makefile
@@ -20,7 +20,8 @@ SOLIBRARY = libtorcs.so
 
 SOLIBDIR  = .
 
-SOURCES   = entry.cpp mainmenu.cpp splash.cpp raceman.cpp exitmenu.cpp optionmenu.cpp driverconfig.cpp joystickconfig.cpp
+SOURCES   = entry.cpp mainmenu.cpp splash.cpp raceman.cpp exitmenu.cpp \
+	    optionmenu.cpp driverconfig.cpp joystickconfig.cpp graphconfig.cpp
 
 LIBS      =  -lplibul
 
