--- a/torcs/torcs/data/data/objects/tree12.ac
+++ b/torcs/torcs/data/data/objects/tree12.ac
@@ -5,7 +5,7 @@ kids 1
 OBJECT poly
 name "rect"
 loc 0 7.5 0
-texture "/home/torcs/runtime3/games/torcs/eee/tree12.rgb"
+texture "tree12.rgb"
 numvert 8
 -8.5 7.5 0
 8.5 7.5 0
