--- a/torcs/torcs/data/data/objects/tree14.ac
+++ b/torcs/torcs/data/data/objects/tree14.ac
@@ -5,7 +5,7 @@ kids 1
 OBJECT poly
 name "rect"
 loc 0 6 0
-texture "/home/torcs/runtime3/games/torcs/eee/tree14.rgb"
+texture "tree14.rgb"
 numvert 8
 -3.5 6 0
 3.5 6 0
