--- a/torcs/torcs/data/data/objects/tree15.ac
+++ b/torcs/torcs/data/data/objects/tree15.ac
@@ -5,7 +5,7 @@ kids 1
 OBJECT poly
 name "rect"
 loc 0 7 0
-texture "/home/torcs/runtime3/games/torcs/eee/tree15.rgb"
+texture "tree15.rgb"
 numvert 8
 -4.5 7 0
 4.5 7 0
