--- a/torcs/torcs/data/data/objects/tree4.ac
+++ b/torcs/torcs/data/data/objects/tree4.ac
@@ -5,7 +5,7 @@ kids 1
 OBJECT poly
 name "rect"
 loc 0 7 0
-texture "/home/torcs/runtime3/games/torcs/eee/tree4.rgb"
+texture "tree4.rgb"
 numvert 8
 -5 7 0
 5 7 0
