--- a/torcs/torcs/data/data/objects/tree8.ac
+++ b/torcs/torcs/data/data/objects/tree8.ac
@@ -5,7 +5,7 @@ kids 1
 OBJECT poly
 name "rect"
 loc -2.38418e-07 6.25 0
-texture "/home/torcs/runtime3/games/torcs/eee/tree8.rgb"
+texture "tree8.rgb"
 numvert 8
 -4.5 6.25 0
 4.5 6.25 0
