--- a/torcs/torcs/data/cars/Makefile
+++ b/torcs/torcs/data/cars/Makefile
@@ -16,7 +16,9 @@
 ##############################################################################
 
 
-DATASUBDIRS = categories models
+DATASUBDIRS	= categories models
+
+PKGSUBDIR	= categories
 
 
 include ${MAKE_DEFAULT}
