--- a/torcs/torcs/data/cars/categories/Offroad-RWD-GrA/Makefile
+++ b/torcs/torcs/data/cars/categories/Offroad-RWD-GrA/Makefile
@@ -20,6 +20,9 @@ DATADIR   = categories
 
 DATA      = $(shell find * -maxdepth 0 -type f -name '*.xml')
 
+data_PKGFILES	= $(DATA)
+
+data_PKGDIR	= $(DATADIR)
 
 include ${MAKE_DEFAULT}
 
