--- a/torcs/torcs/data/data/Makefile
+++ b/torcs/torcs/data/data/Makefile
@@ -19,6 +19,8 @@
 DATASUBDIRS = img menu fonts textures sound objects tracks
 
 
+PKGSUBDIR	= img menu fonts textures sound tracks
+
 include ${MAKE_DEFAULT}
 
 
