--- a/torcs/torcs/src/drivers/damned/2/Makefile
+++ b/torcs/torcs/src/drivers/damned/2/Makefile
@@ -21,4 +21,8 @@ DATADIR   = drivers/${ROBOT}/2
 
 DATA      =  car.xml car-dirt.xml buggy.rgb logo.rgb
 
+e-robots_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
+
+e-robots_PKGDIR		= ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
+
 include ${MAKE_DEFAULT}
