--- a/torcs/torcs/src/interfaces/Makefile
+++ b/torcs/torcs/src/interfaces/Makefile
@@ -19,6 +19,10 @@ EXPDIR  = include
 
 EXPORTS = graphic.h raceman.h robot.h simu.h track.h car.h ttypes.h telemetry.h practicectrl.h playerpref.h js.h
 
+src_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
+
+src_PKGDIR	= ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
+
 include ${MAKE_DEFAULT}
 
 
