--- a/torcs/torcs/src/libs/txml/Makefile
+++ b/torcs/torcs/src/libs/txml/Makefile
@@ -28,6 +28,12 @@ EXPDIR      = include
 
 EXPORTS     = xml.h xmlparse.h
 
+PKGSUBDIR	= gennmtab
+
+src_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
+
+src_PKGDIR	= ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
+
 include ${MAKE_DEFAULT}
 
 nametab.h:
