--- a/torcs/torcs/src/modules/raceman/practice/control/Makefile
+++ b/torcs/torcs/src/modules/raceman/practice/control/Makefile
@@ -20,6 +20,12 @@ SUBDIRS     = manual
 
 DATASUBDIRS =
 
+PKGSUBDIR	= $(SUBDIRS)
+
+src_PKGFILES	= Makefile
+
+src_PKGDIR	= ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
+
 
 include ${MAKE_DEFAULT}
 
