--- a/torcs/torcs/src/drivers/Makefile
+++ b/torcs/torcs/src/drivers/Makefile
@@ -19,6 +19,12 @@ SUBDIRS = $(shell find * -maxdepth 0 -type d -print | grep -v CVS)
 
 DATASUBDIRS = $(SUBDIRS)
 
+PKGSUBDIR	= $(SUBDIRS)
+
+src_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
+
+src_PKGDIR	= ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
+
 include ${MAKE_DEFAULT}
 
 
