--- a/torcs/torcs/src/drivers/damned/7/Makefile
+++ b/torcs/torcs/src/drivers/damned/7/Makefile
@@ -22,6 +22,10 @@ DATADIR   = drivers/${ROBOT}/7
 
 DATA      =  porsche-gt1.rgb logo.rgb car.xml
 
+e-robots_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
+
+e-robots_PKGDIR		= ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
+
 include ${MAKE_DEFAULT}
 
 
