--- a/torcs/torcs/src/drivers/damned/Makefile
+++ b/torcs/torcs/src/drivers/damned/Makefile
@@ -29,6 +29,12 @@ DATA      = ${ROBOT}.xml car1.xml
 
 DATASUBDIRS = 1 2 3 4 5 6 7 8 9 10
 
+PKGSUBDIR	= $(DATASUBDIRS)
+
+e-robots_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
+
+e-robots_PKGDIR		= ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
+
 include ${MAKE_DEFAULT}
 
 
