--- a/torcs/torcs/src/libs/Makefile
+++ b/torcs/torcs/src/libs/Makefile
@@ -24,6 +24,12 @@ TOOLSUBDIRS	= txml
 
 SUBDIRS		= racemantools robottools txml tgf torcs
 
+PKGSUBDIR	= $(SUBDIRS)
+
+src_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
+
+src_PKGDIR	= ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
+
 
 include ${MAKE_DEFAULT}
 
