--- a/torcs/torcs/src/libs/racemantools/Makefile
+++ b/torcs/torcs/src/libs/racemantools/Makefile
@@ -30,6 +30,10 @@ DATADIR   = results
 
 DATA      = res.png
 
+src_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
+
+src_PKGDIR	= ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
+
 include ${MAKE_DEFAULT}
 
 
