--- a/torcs/torcs/src/libs/robottools/Makefile
+++ b/torcs/torcs/src/libs/robottools/Makefile
@@ -26,6 +26,10 @@ EXPDIR  = include
 
 EXPORTS = robottools.h
 
+src_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
+
+src_PKGDIR	= ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
+
 include ${MAKE_DEFAULT}
 
 
