--- a/torcs/torcs/src/libs/tgf/Makefile
+++ b/torcs/torcs/src/libs/tgf/Makefile
@@ -50,6 +50,10 @@ DATADIR = config
 
 DATA    = screen.xml params.dtd
 
+src_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
+
+src_PKGDIR	= ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
+
 include ${MAKE_DEFAULT}
 
 
