--- a/torcs/torcs/src/libs/torcs/Makefile
+++ b/torcs/torcs/src/libs/torcs/Makefile
@@ -29,6 +29,10 @@ EXPDIR    = include
 
 EXPORTS   = torcs.h
 
+src_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
+
+src_PKGDIR	= ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
+
 include ${MAKE_DEFAULT}
 
 
