--- a/torcs/torcs/src/libs/txml/gennmtab/Makefile
+++ b/torcs/torcs/src/libs/txml/gennmtab/Makefile
@@ -24,6 +24,10 @@ TOOLS = gennmtab
 
 SOURCES = gennmtab.c
 
+src_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
+
+src_PKGDIR	= ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
+
 include ${MAKE_DEFAULT}
 
 
