--- a/torcs/torcs/src/modules/raceman/practice/control/manual/Makefile
+++ b/torcs/torcs/src/modules/raceman/practice/control/manual/Makefile
@@ -22,6 +22,10 @@ MODULEDIR = modules/raceman/practice/control
 
 SOURCES   = manual.cpp
 
+src_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
+
+src_PKGDIR	= ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
+
 include ${MAKE_DEFAULT}
 
 
