--- a/torcs/torcs/src/modules/simu/Makefile
+++ b/torcs/torcs/src/modules/simu/Makefile
@@ -22,4 +22,10 @@ DATASUBDIRS	= $(SUBDIRS)
 
 EXPINCDIRS	= $(shell find * -maxdepth 0 -type d -print | grep -v CVS)
 
+PKGSUBDIR	= $(SUBDIRS)
+
+src_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
+
+src_PKGDIR	= ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
+
 include ${MAKE_DEFAULT}
