--- a/torcs/torcs/src/modules/simu/simuv2/Makefile
+++ b/torcs/torcs/src/modules/simu/simuv2/Makefile
@@ -40,5 +40,11 @@ SUBDIRS		= SOLID-2.0
 
 EXPINCDIRS	= SOLID-2.0
 
+PKGSUBDIR	= $(SUBDIRS)
+
+src_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
+
+src_PKGDIR	= ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
+
 include ${MAKE_DEFAULT}
 
