--- a/torcs/torcs/src/modules/simu/simuv2/SOLID-2.0/Makefile
+++ b/torcs/torcs/src/modules/simu/simuv2/SOLID-2.0/Makefile
@@ -21,6 +21,12 @@ SUBDIRS		= src
 
 EXPINCDIRS	= include
 
+PKGSUBDIR	= $(SUBDIRS) $(EXPINCDIRS)
+
+src_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
+
+src_PKGDIR	= ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
+
 include ${MAKE_DEFAULT}
 
 
