--- a/torcs/torcs/src/modules/simu/simuv2/SOLID-2.0/include/Makefile
+++ b/torcs/torcs/src/modules/simu/simuv2/SOLID-2.0/include/Makefile
@@ -19,6 +19,11 @@
 
 EXPINCDIRS	= 3D SOLID
 
+PKGSUBDIR	= $(EXPINCDIRS)
+
+src_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
+
+src_PKGDIR	= ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
 
 include ${MAKE_DEFAULT}
 
