--- a/torcs/torcs/src/modules/simu/simuv2/SOLID-2.0/src/Makefile
+++ b/torcs/torcs/src/modules/simu/simuv2/SOLID-2.0/src/Makefile
@@ -27,5 +27,9 @@ LIBDIR	     =	lib
 
 COMPILFLAGS  =	-DNDEBUG
 
+src_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
+
+src_PKGDIR	= ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
+
 include ${MAKE_DEFAULT}
 
