--- a/torcs/torcs/src/modules/telemetry/Makefile
+++ b/torcs/torcs/src/modules/telemetry/Makefile
@@ -26,6 +26,9 @@ DATADIR   = telemetry
 
 DATA      = telemetry.sh
 
+src_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
+
+src_PKGDIR	= ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
 
 include ${MAKE_DEFAULT}
 
