--- a/torcs/torcs/src/modules/track/Makefile
+++ b/torcs/torcs/src/modules/track/Makefile
@@ -22,5 +22,9 @@ MODULEDIR = modules/track
 
 SOURCES   = track.cpp trackitf.cpp trackutil.cpp track3.cpp track4.cpp
 
+src_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
+
+src_PKGDIR	= ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
+
 include ${MAKE_DEFAULT}
 
