--- a/torcs/torcs/src/tools/Makefile
+++ b/torcs/torcs/src/tools/Makefile
@@ -19,8 +19,13 @@
 
 TOOLSUBDIRS   = launcher
 
-SUBDIRS	      = texmapper trackgen
+SUBDIRS	      = $(shell find * -maxdepth 0 -type d -print | grep -v CVS | grep -v $(TOOLSUBDIRS))
 
+PKGSUBDIR     = $(TOOLSUBDIRS) $(SUBDIRS)
+
+src_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
+
+src_PKGDIR	= ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
 
 include ${MAKE_DEFAULT}
 
