--- a/torcs/torcs/src/tools/launcher/Makefile
+++ b/torcs/torcs/src/tools/launcher/Makefile
@@ -20,6 +20,10 @@ TOOLSDIR    =
 
 TOOLSCRIPT  = torcs
 
+src_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
+
+src_PKGDIR	= ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
+
 include ${MAKE_DEFAULT}
 
 
