--- a/torcs/torcs/data/cars/categories/Makefile
+++ b/torcs/torcs/data/cars/categories/Makefile
@@ -18,7 +18,7 @@
 
 DATASUBDIRS	= $(shell find * -maxdepth 0 -type d -print | grep -v CVS)
 
-PKGSUBDIR	= $(DATASUBDIRS)
+PKGSUBDIRS	= $(DATASUBDIRS)
 
 include ${MAKE_DEFAULT}
 
