--- a/torcs/torcs/src/modules/raceman/Makefile
+++ b/torcs/torcs/src/modules/raceman/Makefile
@@ -20,7 +20,7 @@ SUBDIRS     = $(shell find * -maxdepth 0 -type d -print | grep -v CVS)
 
 DATASUBDIRS = $(SUBDIRS)
 
-PKGSUBDIR	= $(SUBDIRS)
+PKGSUBDIRS	= $(SUBDIRS)
 
 src_PKGFILES	= Makefile
 
