--- a/torcs/torcs/data/cars/models/lotus-gt1/Makefile
+++ b/torcs/torcs/data/cars/models/lotus-gt1/Makefile
@@ -23,6 +23,10 @@ DATA      = lotus-gt1.xml  lotus-gt1.ac \
 	    lotus-gt1-base.ac texmapper.xml \
 	    tex-wheel.rgb lotus-gt1.rgb lotus-gt1-512.rgb 
 
+gt-cars_PKGFILES	= $(DATA)
+
+gt-cars_PKGDIR	= $(DATADIR)
+
 include ${MAKE_DEFAULT}
 
 
