--- a/torcs/torcs/data/cars/models/porsche-gt1/Makefile
+++ b/torcs/torcs/data/cars/models/porsche-gt1/Makefile
@@ -23,6 +23,10 @@ DATADIR   = cars/porsche-gt1
 DATA      = porsche-gt1.xml  porsche-gt1.ac porsche-gt1-lod1.ac \
 	    tex-wheel.rgb porsche-gt1.rgb
 
+gt-cars_PKGFILES	= $(DATA)
+
+gt-cars_PKGDIR	= $(DATADIR)
+
 include ${MAKE_DEFAULT}
 
 
