--- a/torcs/torcs/data/cars/models/viper-gts-r/Makefile
+++ b/torcs/torcs/data/cars/models/viper-gts-r/Makefile
@@ -22,6 +22,10 @@ DATADIR   = cars/viper-gts-r
 DATA      = viper-gts-r.xml tex-wheel.rgb viper-gts-r.rgb  viper-gts-r.ac \
 	    viper-gts-r-512.rgb viper-gts-r-base.ac texmapper.xml
 
+gt-cars_PKGFILES	= $(DATA)
+
+gt-cars_PKGDIR	= $(DATADIR)
+
 include ${MAKE_DEFAULT}
 
 
