--- a/torcs/torcs/data/tracks/e-track-2/Makefile
+++ b/torcs/torcs/data/tracks/e-track-2/Makefile
@@ -20,6 +20,9 @@ DATADIR   = tracks/road/e-track-2
 
 DATA      = e-track-2.xml background.png e-track-2.ac e-track-2-relief.ac e-track-2.png elevation-map.png object-map1.png object-map2.png pylon3.rgb
 
+data_PKGFILES	= $(DATA)
+
+data_PKGDIR	= $(DATADIR)
 
 include ${MAKE_DEFAULT}
 
