--- a/torcs/torcs/data/tracks/wheel-1/Makefile
+++ b/torcs/torcs/data/tracks/wheel-1/Makefile
@@ -20,6 +20,9 @@ DATADIR   = tracks/road/wheel-1
 
 DATA      = wheel-1.xml background.png env.rgb wheel-1.ac wheel-1.ac wheel-1.png
 
+data_PKGFILES	= $(DATA)
+
+data_PKGDIR	= $(DATADIR)
 
 include ${MAKE_DEFAULT}
 
