--- a/torcs/torcs/src/drivers/berniw/Makefile
+++ b/torcs/torcs/src/drivers/berniw/Makefile
@@ -12,6 +12,12 @@ DATA      = ${ROBOT}.xml logo.rgb parameter.dat intsinsqr.dat intcossqr.dat
 
 DATASUBDIRS = 1 2 3 4 5 6 7 8 9 10
 
+PKGSUBDIRS	= $(DATASUBDIRS)
+
+berniw_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
+
+berniw_PKGDIR	= ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
+
 # Mandatory Line Do Not Remove 
 include ${MAKE_DEFAULT}
 
