--- a/torcs/torcs/src/drivers/human/tracks/Makefile
+++ b/torcs/torcs/src/drivers/human/tracks/Makefile
@@ -17,6 +17,12 @@
 
 DATASUBDIRS = $(shell find * -maxdepth 0 -type d -print | grep -v CVS)
 
+PKGSUBDIRS	= $(DATASUBDIRS)
+
+src_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
+
+src_PKGDIR	= ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
+
 include ${MAKE_DEFAULT}
 
 
