--- a/torcs/torcs/src/drivers/human/tracks/mixed-1/Makefile
+++ b/torcs/torcs/src/drivers/human/tracks/mixed-1/Makefile
@@ -21,6 +21,10 @@ DATADIR   = drivers/${ROBOT}/tracks/mixed-1
 
 DATA      = $(shell find *.xml -maxdepth 0 -type f -print)
 
+src_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
+
+src_PKGDIR	= ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
+
 include ${MAKE_DEFAULT}
 
 
