--- a/torcs/torcs/src/drivers/inferno4/Makefile
+++ b/torcs/torcs/src/drivers/inferno4/Makefile
@@ -28,8 +28,13 @@ DATADIR   = drivers/${ROBOT}
 
 DATA      = ${ROBOT}.xml car1.xml logo.rgb xj-220.rgb
 
-
 DATASUBDIRS = tracksdata
+
+PKGSUBDIRS		= ${DATASUBDIRS}
+
+e-robots_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
+
+e-robots_PKGDIR		= ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
 
 include ${MAKE_DEFAULT}
 
