--- a/torcs/torcs/src/drivers/lliaw/Makefile
+++ b/torcs/torcs/src/drivers/lliaw/Makefile
@@ -30,6 +30,12 @@ DATA      = ${ROBOT}.xml car.xml viper-gts-r.rgb logo.rgb
 
 DATASUBDIRS = tracksdata
 
+PKGSUBDIRS		= ${DATASUBDIRS}
+
+e-robots_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
+
+e-robots_PKGDIR		= ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
+
 include ${MAKE_DEFAULT}
 
 
