--- a/torcs/torcs/src/modules/raceman/practice/Makefile
+++ b/torcs/torcs/src/modules/raceman/practice/Makefile
@@ -20,7 +20,7 @@ SUBDIRS     = practice control
 
 DATASUBDIRS = practice
 
-PKGSUBDIR	= $(SUBDIRS)
+PKGSUBDIRS	= $(SUBDIRS)
 
 src_PKGFILES	= Makefile
 
