--- a/torcs/torcs/src/modules/simu/Makefile
+++ b/torcs/torcs/src/modules/simu/Makefile
@@ -22,7 +22,7 @@ DATASUBDIRS	= $(SUBDIRS)
 
 EXPINCDIRS	= $(shell find * -maxdepth 0 -type d -print | grep -v CVS)
 
-PKGSUBDIR	= $(SUBDIRS)
+PKGSUBDIRS	= $(SUBDIRS)
 
 src_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
 
