--- a/torcs/torcs/src/modules/simu/simuv2/SOLID-2.0/include/Makefile
+++ b/torcs/torcs/src/modules/simu/simuv2/SOLID-2.0/include/Makefile
@@ -19,7 +19,7 @@
 
 EXPINCDIRS	= 3D SOLID
 
-PKGSUBDIR	= $(EXPINCDIRS)
+PKGSUBDIRS	= $(EXPINCDIRS)
 
 src_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
 
