--- a/torcs/torcs/src/tools/Makefile
+++ b/torcs/torcs/src/tools/Makefile
@@ -21,7 +21,7 @@ TOOLSUBDIRS   = launcher
 
 SUBDIRS	      = $(shell find * -maxdepth 0 -type d -print | grep -v CVS | grep -v $(TOOLSUBDIRS))
 
-PKGSUBDIR     = $(TOOLSUBDIRS) $(SUBDIRS)
+PKGSUBDIRS     = $(TOOLSUBDIRS) $(SUBDIRS)
 
 src_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
 
