--- a/torcs/torcs/data/tracks/e-track-4/Makefile
+++ b/torcs/torcs/data/tracks/e-track-4/Makefile
@@ -21,6 +21,10 @@ DATADIR   = tracks/road/e-track-4
 DATA      = e-track-4.xml background.png e-track-4.ac e-track-4.png
 
 
+base-road-tracks_PKGFILES	= $(DATA)
+
+base-road-tracks_PKGDIR		= $(DATADIR)
+
 include ${MAKE_DEFAULT}
 
 
