--- a/torcs/torcs/data/tracks/eroad/Makefile
+++ b/torcs/torcs/data/tracks/eroad/Makefile
@@ -20,6 +20,9 @@ DATADIR   = tracks/road/eroad
 
 DATA      = eroad.xml background.png eroad.ac eroad-relief.ac eroad.png
 
+base-tracks_PKGFILES	= $(DATA)
+
+base-tracks_PKGDIR		= $(DATADIR)
 
 include ${MAKE_DEFAULT}
 
