--- a/torcs/torcs/data/tracks/g-track-1/Makefile
+++ b/torcs/torcs/data/tracks/g-track-1/Makefile
@@ -21,6 +21,10 @@ DATADIR   = tracks/oval/g-track-1
 DATA      = g-track-1.xml g-track-1.ac background.png  g-track-1.png $(shell find * -maxdepth 0 -type f -name '*.rgb')
 
 
+g-tracks_PKGFILES	= $(DATA)
+
+g-tracks_PKGDIR		= $(DATADIR)
+
 include ${MAKE_DEFAULT}
 
 
