--- a/torcs/torcs/data/tracks/road/Makefile
+++ b/torcs/torcs/data/tracks/road/Makefile
@@ -18,6 +18,7 @@
 
 DATASUBDIRS = $(shell find * -maxdepth 0 -type d -print | grep -v CVS)	
 
+PKGSUBDIRS	= $(DATASUBDIRS)
 
 include ${MAKE_DEFAULT}
 
