--- a/torcs/torcs/data/tracks/dirt-6/Makefile
+++ b/torcs/torcs/data/tracks/dirt-6/Makefile
@@ -20,9 +20,9 @@ DATADIR   = tracks/dirt/dirt-6
 
 DATA      = dirt-6.xml background.png dirt-6.ac dirt-6.png
 
-base-dirt-tracks_PKGFILES	= $(DATA)
+base-tracks_PKGFILES	= $(DATA)
 
-base-dirt-tracks_PKGDIR		= $(DATADIR)
+base-tracks_PKGDIR		= $(DATADIR)
 
 
 include ${MAKE_DEFAULT}
